[gd_scene load_steps=5 format=3 uid="uid://5lynws024gew"]

[ext_resource type="Script" path="res://assets/debug/scripts/debug_section_combat.gd" id="2_y8rs4"]
[ext_resource type="PackedScene" uid="uid://baj8jkegepq5f" path="res://assets/debug/scenes/debug_units_input.tscn" id="3_bmhxi"]

[sub_resource type="LabelSettings" id="LabelSettings_resk1"]
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_dkh2n"]
font_size = 14

[node name="CombatDebugPanel" type="TabContainer"]
offset_right = 320.0
offset_bottom = 380.0

[node name="Wall 1" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Container" type="VBoxContainer" parent="Wall 1"]
layout_mode = 2
script = ExtResource("2_y8rs4")

[node name="PanelTitle" type="Label" parent="Wall 1/Container"]
layout_mode = 2
text = "Combat"
label_settings = SubResource("LabelSettings_resk1")

[node name="YourLabel" type="Label" parent="Wall 1/Container"]
layout_mode = 2
text = "You"
label_settings = SubResource("LabelSettings_dkh2n")

[node name="YourUnits" parent="Wall 1/Container" instance=ExtResource("3_bmhxi")]
layout_mode = 2

[node name="EnemyLabel" type="Label" parent="Wall 1/Container"]
layout_mode = 2
text = "Enemy"
label_settings = SubResource("LabelSettings_dkh2n")

[node name="EnemyUnits" parent="Wall 1/Container" instance=ExtResource("3_bmhxi")]
layout_mode = 2
consume_available = false

[node name="HSeparator" type="HSeparator" parent="Wall 1/Container"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RunButton" type="Button" parent="Wall 1/Container"]
layout_mode = 2
text = "Roll Combat"

[node name="Results" type="RichTextLabel" parent="Wall 1/Container"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
text = "You Rolled 6 (d6), 5 (d6), 3 (d4)
Enemy Rolled 5 (d6), 5 (d8), 4 (d6)
You lose 1d4
Enemy loses 1d6
Enemy deals X damage"
scroll_active = false
